second fix of horizontal scroll and fonts

--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -23,6 +23,6 @@
 
 @media screen and (min-width: 1280px){
     .lead {
-        min-width: calc(1280px - 92px)
+        min-width: calc(1280px - 92px);
     }
 }
